--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "lucide-react": "^0.408.0",
-    "markdown-to-json": "^0.5.4",
     "next": "14.2.5",
     "pg": "^8.12.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
